--- a/api_data_wrangling_mini_project.ipynb
+++ b/api_data_wrangling_mini_project.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -116,14 +116,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dataset:  {'id': 46157199, 'dataset_code': 'SE7', 'database_code': 'XFRA', 'name': 'Seiko Epson Corp (SE7) Adjusted Stock Prices', 'description': ' <b>Ticker</b>: SE7 <br> <br> <b>Exchange</b>: XFRA <br> <br> Columns: <br> <br> Open,High,Low,Close,Volume are adjusted and shown in EUR currency. <br> <br> Adjustment Factor shows the factor by which prices are adjusted on days which adjustments take place <br> <br> Adjustment Type is a number representing the type of adjustment. Refer to documentation for more information on these codes.', 'refreshed_at': '2022-01-29T03:52:02.543Z', 'newest_available_date': '2018-11-30', 'oldest_available_date': '2007-01-02', 'column_names': ['Date', 'Open', 'High', 'Low', 'Close', 'Volume', 'Adjustment Factor', 'Adjustment Type'], 'frequency': 'daily', 'type': 'Time Series', 'premium': True, 'limit': None, 'transform': None, 'column_index': None, 'start_date': '2017-01-02', 'end_date': '2017-01-02', 'data': [['2017-01-02', 16.541989, 16.541989, 16.541989, 16.541989, 0.0, None, None]], 'collapse': None, 'order': None, 'database_id': 15302}\n"
+      "dataset:  {'id': 10095370, 'dataset_code': 'AFX_X', 'database_code': 'FSE', 'name': 'Carl Zeiss Meditec (AFX_X)', 'description': 'Stock Prices for Carl Zeiss Meditec (2020-11-02) from the Frankfurt Stock Exchange.<br><br>Trading System: Xetra<br><br>ISIN: DE0005313704', 'refreshed_at': '2020-12-01T14:48:09.907Z', 'newest_available_date': '2020-12-01', 'oldest_available_date': '2000-06-07', 'column_names': ['Date', 'Open', 'High', 'Low', 'Close', 'Change', 'Traded Volume', 'Turnover', 'Last Price of the Day', 'Daily Traded Units', 'Daily Turnover'], 'frequency': 'daily', 'type': 'Time Series', 'premium': False, 'limit': None, 'transform': None, 'column_index': None, 'start_date': '2017-01-02', 'end_date': '2017-01-02', 'data': [['2017-01-02', 34.99, 35.94, 34.99, 35.8, None, 44700.0, 1590561.0, None, None, None]], 'collapse': None, 'order': None, 'database_id': 6129}\n"
      ]
     }
    ],
    "source": [
     "# Now, call the Quandl API and pull out a small sample of the data (only one day) to get a glimpse\n",
     "# into the JSON structure that will be returned\n",
-    "url =  \"https://data.nasdaq.com/api/v3/datasets/XFRA/SE7?start_date=2017-01-02&end_date=2017-01-02&api_key=\"+API_KEY\n",
+    "url =  \"https://data.nasdaq.com/api/v3/datasets/FSE/AFX_X?start_date=2017-01-02&end_date=2017-01-02&api_key=\"+API_KEY\n",
     "r = requests.get(url)\n",
     "json_data = r.json()\n",
     "for k in json_data.keys():\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -141,7 +141,7 @@
    "outputs": [],
    "source": [
     "# Alter URL for an entire year\n",
-    "url =  \"https://data.nasdaq.com/api/v3/datasets/XFRA/SE7?start_date=2017-01-01&end_date=2017-12-31&api_key=\"+API_KEY\n",
+    "url =  \"https://data.nasdaq.com/api/v3/datasets/FSE/AFX_X?start_date=2017-01-01&end_date=2017-12-31&api_key=\"+API_KEY\n",
     "r = requests.get(url)\n",
     "dictdata = r.json()"
    ]
@@ -150,28 +150,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Find Highes and Lowest openning prices"
+    "Find Highes and Lowest opening prices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18.895015\n",
-      "15.360317\n"
+      "53.11\n",
+      "34.0\n"
      ]
     }
    ],
    "source": [
     "n = len(dictdata['dataset']['data'])\n",
     "prices = [dictdata['dataset']['data'][i][1] for i in range(n)]\n",
-    "max_p = max(prices)\n",
-    "min_p = min(prices)\n",
+    "f_prices = list(filter(lambda p: p != None, prices))\n",
+    "\n",
+    "max_p = max(f_prices)\n",
+    "min_p = min(f_prices)\n",
     "print(max_p)\n",
     "print(min_p)"
    ]
@@ -185,14 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.5644690000000026\n"
+      "2.8100000000000023\n"
      ]
     }
    ],
@@ -211,14 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.6527519999999996\n"
+      "2.559999999999995\n"
      ]
     }
    ],
@@ -238,19 +240,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "117.03076923076924\n"
+      "89124.33725490196\n"
      ]
     }
    ],
    "source": [
-    "avgVol = sum([dictdata['dataset']['data'][i][5] for i in range(n)])/len([dictdata['dataset']['data'][i][5] for i in range(n)])\n",
+    "\n",
+    "Vol = [dictdata['dataset']['data'][i][6] for i in range(n)]\n",
+    "f_vol = list(filter(lambda v: v != None, Vol))\n",
+    "\n",
+    "avgVol = sum(f_vol)/len(f_vol)\n",
     "print(avgVol)"
    ]
   },
@@ -263,14 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n"
+      "76286.0\n"
      ]
     }
    ],
@@ -285,9 +291,10 @@
     "        med = aList[int((n-1)/2)]\n",
     "    return(med)\n",
     "\n",
-    "clsVol = [dictdata['dataset']['data'][i][5] for i in range(n)]\n",
+    "clsVol = [dictdata['dataset']['data'][i][6] for i in range(n)]\n",
+    "f_vol = list(filter(lambda v: v != None, Vol))\n",
     "\n",
-    "print(median(clsVol))"
+    "print(median(f_vol))"
    ]
   },
   {
