--- a/api_data_wrangling_mini_project.ipynb
+++ b/api_data_wrangling_mini_project.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -150,12 +150,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Find Highes and Lowest opening prices"
+    "Find Highest and Lowest opening prices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,12 +220,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.559999999999995\n"
+      "2.56\n"
      ]
     }
    ],
    "source": [
-    "adjDay = [dictdata['dataset']['data'][i][4]- dictdata['dataset']['data'][i+1][4] for i in range(n-1)]\n",
+    "day = [dictdata['dataset']['data'][i][4] for i in range(n)]\n",
+    "f_day = list(filter(lambda d: d != None, day))\n",
+    "adjDay = [round(f_day[i]- f_day[i+1],2) for i in range(n-1)]\n",
     "absLst = list(map(abs, adjDay))\n",
     "maxAbsChng = max(absLst)\n",
     "print(maxAbsChng)"
@@ -240,14 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "89124.33725490196\n"
+      "89124.34\n"
      ]
     }
    ],
@@ -256,7 +258,7 @@
     "Vol = [dictdata['dataset']['data'][i][6] for i in range(n)]\n",
     "f_vol = list(filter(lambda v: v != None, Vol))\n",
     "\n",
-    "avgVol = sum(f_vol)/len(f_vol)\n",
+    "avgVol = round(sum(f_vol)/len(f_vol), 2)\n",
     "print(avgVol)"
    ]
   },
@@ -269,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -286,9 +288,9 @@
     "    n = len(aList)\n",
     "\n",
     "    if n % 2 == 0: \n",
-    "        med = (aList[int(n/2)-1] + aList[int(n/2)])/2\n",
+    "        med = round((aList[int(n/2)-1] + aList[int(n/2)])/2, 2)\n",
     "    else:\n",
-    "        med = aList[int((n-1)/2)]\n",
+    "        med = round(aList[int((n-1)/2)],2)\n",
     "    return(med)\n",
     "\n",
     "clsVol = [dictdata['dataset']['data'][i][6] for i in range(n)]\n",
@@ -320,7 +322,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -334,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
